--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "middle-block-reaction-trainer",
   "version": "0.1.0",
+  "homepage": "https://4dambarr.github.io/middle-block-reaction-trainer",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -28,6 +29,8 @@
     "workbox-streams": "^6.6.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
